--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "googleapis": "^59.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.3"
   },
   "devDependencies": {
